--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mimc-hasher",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "TypeScript implementation of the ZK-friendly MIMC Cipher hash function.",
   "scripts": {
     "test": "jest",
@@ -18,6 +18,10 @@
       "require": "./dist/bundle.cjs",
       "import": "./dist/bundle.mjs"
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Helium-Labs/MiMC-Hasher"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
